unpackaged/main/default/objects/DSCORGPKG__ConflictField__c/DSCORGPKG__ConflictField__c.object-meta.xml
<CustomObject>
    <label>ConflictField</label>
    <nameField>
        <displayFormat>CF-{0000}</displayFormat>
        <label>ConflictField Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ConflictFields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>