unpackaged/main/default/objects/DSCORGPKG__ConflictField__c/fields/DSCORGPKG__Name__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Name__c</fullName>
    <label>Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Name</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>NumberOfEmployees</fullName>
            </value>
            <value>
                <fullName>AnnualRevenue</fullName>
            </value>
            <value>
                <fullName>ShippingStreet</fullName>
            </value>
            <value>
                <fullName>BillingStreet</fullName>
            </value>
            <value>
                <fullName>ShippingCity</fullName>
            </value>
            <value>
                <fullName>BillingCity</fullName>
            </value>
            <value>
                <fullName>ShippingState</fullName>
            </value>
            <value>
                <fullName>ShippingPostalCode</fullName>
            </value>
            <value>
                <fullName>BillingState</fullName>
            </value>
            <value>
                <fullName>BillingPostalCode</fullName>
            </value>
            <value>
                <fullName>FirstName</fullName>
            </value>
            <value>
                <fullName>LastName</fullName>
            </value>
            <value>
                <fullName>Title</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>MailingCity</fullName>
            </value>
            <value>
                <fullName>MailingState</fullName>
            </value>
            <value>
                <fullName>Description</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>