unpackaged/main/default/objects/DSCORGPKG__ConflictField__c/fields/DSCORGPKG__NumericalValue__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__NumericalValue__c</fullName>
    <label>NumericalValue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>