unpackaged/main/default/objects/DSCORGPKG__ConflictField__c/fields/DSCORGPKG__Type__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>