unpackaged/main/default/objects/DSCORGPKG__ConflictField__c/fields/DSCORGPKG__Value__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>